--- a/src/pages/product/[slug]/index.astro
+++ b/src/pages/product/[slug]/index.astro
@@ -2,6 +2,7 @@
 import Card from '@/components/Card.astro'
 import products from '@/data/products.json'
 import BaseLayout from '@/layouts/BaseLayout.astro'
+import { Icon } from 'astro-icon/components'
 import type { Product } from '@/types'
 
 export function getStaticPaths() {
@@ -22,15 +23,22 @@ const product = products.find((i) => i.slug === slug) as Product
   image={product.cover}
 >
   <div class="relative mx-auto max-w-4xl">
-    <div class="pb-10">
-      <a href="/">戻るボタン</a>
-      <a href="/">home</a>
-      <span>{product.category}</span>
+    <div class="flex items-center gap-2 pb-10 text-gray-500">
+      <a
+        href="/"
+        class="z-10 mr-4 rounded-full bg-gray-900 p-2 font-semibold text-white hover:bg-gray-800"
+      >
+        <Icon name="mdi:chevron-left" class="h-6 w-6" />
+      </a>
+      <a href="/" class="capitalize after:pl-2 after:content-['/']">home</a>
+      <span class="capitalize after:pl-2 after:content-['/']">
+        {product.category}
+      </span>
       <span>{product.name}</span>
     </div>
 
     <div class="flex flex-col sm:gap-8 md:flex-row">
-      <div class="h-full max-h-[450px] w-full max-w-[450px]">
+      <div class="h-full max-h-[450px] w-full max-w-[420px]">
         <img
           src={product.cover}
           alt=""
@@ -38,7 +46,7 @@ const product = products.find((i) => i.slug === slug) as Product
           class="h-full w-full rounded-xl border-b object-cover shadow-2xl shadow-gray-200"
         />
       </div>
-      <article class="flex flex-col justify-between py-4">
+      <article class="flex grow flex-col justify-between py-4">
         <div>
           <h1 class="animate-in text-3xl font-bold sm:text-5xl">
             {product.name}
@@ -50,6 +58,18 @@ const product = products.find((i) => i.slug === slug) as Product
           >
             {product.description}
           </p>
+        </div>
+        <div class="pt-2 text-right sm:pt-8">
+          <div class="text-4xl font-semibold" transition:name={`${slug} price`}>
+            ${product.price}
+          </div>
+          <div class="text-xs text-gray-500">* This is a fictional price</div>
+          <button
+            type="button"
+            class="mt-4 rounded-full bg-gray-900 px-5 py-2 font-semibold text-white hover:bg-gray-800"
+          >
+            Add to cart
+          </button>
         </div>
       </article>
     </div>
