--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,8 @@
 ---
 import '@/styles/globals.scss'
-import '@fontsource/lato/400.css'
-import '@fontsource/lato/700.css'
+import '@fontsource/open-sans/400.css'
+import '@fontsource/open-sans/600.css'
+import '@fontsource/open-sans/700.css'
 import { ViewTransitions } from 'astro:transitions'
 
 interface Props {
